# ai-rakuraku-ordermade

./: .gitignore  CLAUDE.md  docker-compose.yml  package-lock.json  package.json
.claude/: ui-yasui-config.md
.github/workflows/: build-worker.yml
apps/api/: .env.example  .env.secure  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: config.py  deps.py  main.py  middleware.py  schemas.py
apps/api/app/routers/: payments.py  projects.py  sources.py  training.py
apps/api/app/services/: training_jobs.py
apps/api/db/: schema.sql
apps/api/db/migrations/: 002_add_gemma_models.sql  003_add_gguf_manifest.sql  004_update_gemma_models.sql
apps/web/: package.json
apps/web/.claude/: ui-yasui-config.md
apps/web/src/: middleware.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/api/web-vitals/: route.ts
apps/web/src/app/auth/auth-code-error/: page.tsx
apps/web/src/app/auth/callback/: route.ts
apps/web/src/app/auth/password-reset/: page.tsx
apps/web/src/app/benefits/: benefits-content.tsx  page.tsx
apps/web/src/app/contact/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/dashboard/[id]/: page.tsx
apps/web/src/app/dashboard/new/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/app/tokushoho/: page.tsx
apps/web/src/components/: error-alert.tsx  nav.tsx  spinner.tsx  theme-provider.tsx  web-vitals-reporter.tsx
apps/web/src/components/auth/: forgot-form.tsx  login-form.tsx  signup-form.tsx  verify-form.tsx
apps/web/src/components/lp/: benefits.tsx  contact-form.tsx  cta-section.tsx  fade-in.tsx  faq.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  pricing.tsx
apps/web/src/i18n/: translations.ts
apps/web/src/lib/: api.ts  i18n.tsx  status-utils.ts  web-vitals.ts
apps/web/src/lib/supabase/: client.ts  middleware.ts  server.ts
apps/worker/: .env.example  Dockerfile  modal_app.py  pyproject.toml  requirements.txt
apps/worker/.mypy_cache/3.13/: cache.db
apps/worker/scripts/: quality_check.py
apps/worker/worker/: config.py  main.py  pipeline.py
supabase/.temp/: pooler-url  project-ref
tasks/: phase2_plan.md
test-data/: quality_prompts.jsonl
tests/: conftest.py
tests/e2e/: test_payment_flow.py
tests/fixtures/: test_data.py
tests/utils/: db_utils.py
(+2 files in other folders)
