[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-worker"
version = "0.1.0"
description = "GPU Worker for AI Rakuraku Ordermade"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.53.0,<4.58.0",
    "peft>=0.17.0,<0.19.0",
    "bitsandbytes>=0.45.5,!=0.46.0,!=0.48.0",
    "trl==0.18.2",
    "accelerate>=1.0.0,<2.0.0",
    "datasets>=3.4.1,<4.0.0",
    "redis>=5.0.0",
    "supabase>=2.10.0",
    "trafilatura>=1.6.0",
    "pymupdf>=1.23.0",
    "runpod>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.setuptools]
packages = ["worker"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
